# cryptex

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml
docs/: IMPLEMENTATION.md  TESTING.md  trials.md
plots/: benchmark.json  convergence_plot.json  custom_benchmark_suite.json  frequency_comparison.json  key_heatmap.json  phase_transition.json
src/cipher/: __init__.py  adversarial.py  ciphers.py  cli.py  convergence.py  corpus.py  detector.py  display.py  evaluation.py  genetic.py  historical.py  hmm.py  io.py  languages.py  mcmc.py  ngram.py  playfair_cracker.py  transposition_cracker.py  vigenere_cracker.py
src/cryptex/: __init__.py  adversarial.py  benchmark.py  ciphers.py  convergence.py  corpus.py  detector.py  display.py  evaluation.py  genetic.py  historical.py  hmm.py  io.py  languages.py  mcmc.py  ngram.py  playfair_cracker.py  transposition_cracker.py  vigenere_cracker.py  warnings.py
src/cryptex/analysis/: __init__.py  adversarial.py  benchmark.py  convergence.py  evaluation.py
src/cryptex/cli/: __init__.py  display.py  main.py
src/cryptex/core/: __init__.py  detector.py  io.py  ngram.py  scorer.py
src/cryptex/languages/: __init__.py
src/cryptex/solvers/: __init__.py  affine.py  genetic.py  hmm.py  kpa.py  mcmc.py  playfair.py  railfence.py  transposition.py  vigenere.py
tests/: conftest.py  test_adversarial.py  test_ciphers.py  test_cli.py  test_convergence.py  test_corpus.py  test_crackers.py  test_detector.py  test_display.py  test_evaluation.py  test_genetic.py  test_historical.py  test_hmm.py  test_io.py  test_kpa_mode.py  test_languages.py  test_mcmc.py  test_ngram.py  test_phase8_solvers.py  test_stress.py
tools/: run_custom_benchmarks.py
