[project]
name = "cipher"
version = "0.4.0"
description = "High-performance classical cryptanalysis toolkit with adaptive MCMC, parallel tempering, Kneser-Ney 5-gram modeling, and robust dirty-text handling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "rich",
    "requests",
    "matplotlib",
    "numba>=0.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cipher"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
cipher = "cipher.cli:main"
