[project]
name = "cryptex"
version = "0.5.0"
description = "Cryptanalysis: adaptive MCMC, parallel tempering, KP attacks, multilingual 5-gram models, and exhaustive cipher coverage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "rich",
    "requests",
    "numba>=0.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptex"]

[dependency-groups]
dev = [
    "hypothesis>=6.140.2",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
cryptex = "cryptex.cli.main:main"
